Added category default datas and validations
