# src/request_validations/index.ts
@@ -1,0 +1,2 @@
+export * from "./user.validation";
+export * from "./category.validation";
